# md-quicklook

./: .env.example  .gitignore  CHANGELOG.md  PRIVACY_POLICY.md  README.docx  README.md  index.html  package-lock.json  package.json  test.docx  test.md  vite.config.ts
.github/workflows/: release-build.yml
docs/: APP_I18N.md  APP_STORE_METADATA_DRAFT.md  APP_STORE_PREP.md  DOCX_EXPORT_TESTING.md  DOCX_FONT_TESTING.md  EXCEL_EXPORT_TESTING.md  EXPORT_PATH.md  EXPORT_VISUAL_CONSISTENCY.md  FILE_ASSOCIATION.md  FRONT_MATTER_OPERATIONS.md  FRONT_MATTER_TESTING.md  I18N_TESTING.md  KNOWN_LIMITATIONS.md  MAC_APP_STORE_SANDBOX.md  MAC_DISTRIBUTION.md  MAC_DMG_SCRIPT.md  MENU_I18N.md  PDF_EXPORT.md  PDF_EXPORT_TESTING.md  PRIVACY_POLICY_DRAFT.md  RELEASE_CHECKLIST.md  TESTING.md  WINDOWS_BUILD.md  WINDOWS_DISTRIBUTION.md  WINDOWS_MENU.md  WINDOWS_MENU_TESTING.md  test-docx-export.md  test-docx-font.md  test-excel-not-table-only.md  test-excel-table-only.md  test-export-visual-consistency.md  test-frontmatter-edge-cases.md  test-frontmatter-empty-heading.md  test-frontmatter-full.md
scripts/: build-mac-app-store.sh  build-macos-dmg.sh  generate-app-icon.py
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs
src/components/: AppToolbar.vue  OutlinePanel.vue  ReaderView.vue  RichEditor.vue  SourceEditor.vue  ToastNotification.vue  WelcomePage.vue
src/composables/: useToast.ts
src/i18n/: index.ts
src/stores/: editor.ts
(+10 files in other folders)
